add git action create docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   prompts:
-    image: manologcode/prompts
+    image: manologcode/test-prompts
     build:
       context: .
       dockerfile: Dockerfile
